# RusticTasks

./: .gitignore  Cargo.toml  README.md  build.rs
data/: author.csv  author_test.csv  tasks_test.csv
resources/: app_window.ui  resources.gresource.xml  task_box.ui
src/: app.rs  error.rs  lib.rs  main.rs
src/app/: logic.rs
src/app/logic/: task_box.rs  task_entry.rs  todo_list.rs  window.rs
src/app/logic/task_box/: imp.rs
src/app/logic/task_entry/: imp.rs
src/app/logic/todo_list/: author.rs  task.rs
src/app/logic/todo_list/author/: utils.rs
src/app/logic/todo_list/task/: utils.rs
src/app/logic/window/: imp.rs
