[package]
name = "rustic-tasks"
version = "0.1.0"
authors = ["Yashvardhan Singh <draco882003@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
chrono = { version = "0.4.38", features = ["serde"] }
csv = "1.3"
gio = "0.19.5"
gtk = { version = "0.8.2", package = "gtk4", features = ["v4_14"] }
rand = "0.8.5"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
thiserror = "1.0.61"
uuid = { version = "1.8.0", features = ["fast-rng", "serde", "v4"] }

[build-dependencies]
glib-build-tools = "0.19.0"
